--- a/src/interfaces/views/perfil.ejs
+++ b/src/interfaces/views/perfil.ejs
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light">
+
     <title>Perfil de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -14,10 +16,12 @@
     <link href="../../../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="../../../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-    <link href="../../../css/perfil.css" rel="stylesheet">
+    <link href="css/perfil.css" rel="stylesheet">
+
+
 </head>
 
-<body class="bg-light">
+<body >
 
     <!-- Start header -->
     <header id="header" class="header d-flex align-items-center fixed-top">
@@ -25,7 +29,7 @@
 
             <a href="/" class="logo d-flex align-items-center me-auto me-lg-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="../../../images/back/logo_raiz_financiera.webp" alt="" style="max-height: 64px;">
+                <img src="/images/back/logo_raiz_financiera.webp" alt="" style="max-height: 64px;">
 
 
             </a>
