registro administrador arreglado

--- a/src/interfaces/views/login.ejs
+++ b/src/interfaces/views/login.ejs
@@ -116,9 +116,9 @@
                 <ul>
                     <li><a href="/" class="active">Home<br></a></li>
                     <li><a href="/">Acerca de Nosotros</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#portfolio">Otros</a></li>
-                    <li><a href="#team">Grupo de trabajo</a></li>
+                    <li><a href="/">Servicios</a></li>
+                    <li><a href="/">Otros</a></li>
+                    <li><a href="/">Grupo de trabajo</a></li>
                     
 
                 </ul>
