--- a/src/interfaces/views/registroADMIN.ejs
+++ b/src/interfaces/views/registroADMIN.ejs
@@ -109,17 +109,15 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="inputNombre2">Segundo Nombre</label>
-                                    <input type="text" class="form-control" id="inputNombre2" name="nombre2" required />
+                                    <input type="text" class="form-control" id="inputNombre2" name="nombre2" />
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="inputApellido1">Primer Apellido</label>
-                                    <input type="text" class="form-control" id="inputApellido1" name="apellido1"
-                                        required />
+                                    <input type="text" class="form-control" id="inputApellido1" name="apellido1" required />
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="inputApellido2">Segundo Apellido</label>
-                                    <input type="text" class="form-control" id="inputApellido2" name="apellido2"
-                                        required />
+                                    <input type="text" class="form-control" id="inputApellido2" name="apellido2 />
                                 </div>
                             </div>
 
