--- a/src/interfaces/views/perfil.ejs
+++ b/src/interfaces/views/perfil.ejs
@@ -36,11 +36,11 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="#hero" class="active">Home<br></a></li>
-                    <li><a href="#about">Acerca de Nosotros</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#portfolio">Otros</a></li>
-                    <li><a href="#team">Grupo de trabajo</a></li>
+                    <li><a href="/" class="active">Home<br></a></li>
+                    <li><a href="/">Acerca de Nosotros</a></li>
+                    <li><a href="/">Servicios</a></li>
+                    <li><a href="/">Otros</a></li>
+                    <li><a href="/">Grupo de trabajo</a></li>
                     <% if (token) { %>
                         <li><a href="/perfil">Perfil</a></li>
                         <% } %>
